# example-plugins

./: .gitignore  BoringMixer.cpp  CMakeLists.txt  MySaw.cpp  README.md
01-BoringMixer/: BoringMixer.cpp  CMakeLists.txt
01a-BoringMixer/: BoringMixer.cpp  BoringMixer.sc  CMakeLists.txt
01b-BoringMixer/: BoringMixer.cpp
02-MySaw/: CMakeLists.txt
02a-MySaw/: CMakeLists.txt  MySaw.sc
02b-MySaw/: CMakeLists.txt  MySaw.cpp  MySaw2.cpp  MySaw2.sc
03-AnalogEcho/: AnalogEcho.cpp  CMakeLists.txt
